<resources>
    <string name="app_name">Your Contacts</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="finish">Finish</string>
    <string name="add_contact">Add Contact</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="search">Search</string>
</resources>