<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7ECF6"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Contact"
            android:textSize="40sp"
            android:textColor="#282F3A"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout"
        android:layout_below="@+id/pageTitle"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textColorHint="#282F3A"
            app:boxStrokeColor="#6191E4"
            app:cornerRadius="20dp"
            app:endIconMode="clear_text"
            app:endIconTint="#6191E4"
            app:hintTextColor="#282F3A"
            app:errorEnabled="true"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_EDT_firstName"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_edt_name_32"
                android:drawablePadding="10dp"
                android:drawableTint="#6191E4"
                android:hint="@string/first_name"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#282F3A"
                android:textSize="25sp"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textColorHint="#282F3A"
            app:boxStrokeColor="#6191E4"
            app:cornerRadius="20dp"
            app:endIconMode="clear_text"
            app:endIconTint="#6191E4"
            app:hintTextColor="#282F3A"
            app:errorEnabled="true"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_EDT_lastName"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_edt_name_32"
                android:drawablePadding="10dp"
                android:drawableTint="#6191E4"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#282F3A"
                android:textSize="25sp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textColorHint="#282F3A"
            app:boxStrokeColor="#6191E4"
            app:cornerRadius="20dp"
            app:endIconMode="clear_text"
            app:endIconTint="#6191E4"
            app:hintTextColor="#282F3A"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_EDT_email"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_edt_email_30"
                android:drawablePadding="10dp"
                android:drawableTint="#6191E4"
                android:hint="@string/Email"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#282F3A"
                android:textSize="25sp"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textColorHint="#282F3A"
            app:boxStrokeColor="#6191E4"
            app:cornerRadius="20dp"
            app:endIconMode="clear_text"
            app:endIconTint="#6191E4"
            app:hintTextColor="#282F3A"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_EDT_phoneNumber"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:drawableStart="@drawable/ic_edt_phone_30"
                android:drawablePadding="10dp"
                android:drawableTint="#6191E4"
                android:hint="@string/phone_number"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#282F3A"
                android:textSize="25sp"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact_BTN_finish"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/finish"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#4770B6"
            app:cornerRadius="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact_BTN_exit"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Exit Without Saving"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#6398F3"
            app:cornerRadius="10dp"/>
    </LinearLayout>

</RelativeLayout>